Github build fix