@@ -8,6 +8,7 @@ import org.junit.runners.JUnit4;
 import chinhdo.util.ConfigManager;
 import static org.mockito.Mockito.*;
 import java.io.IOException;
+import java.util.Arrays;
 import java.util.List;
 
 @RunWith(JUnit4.class)
@@ -29,10 +30,8 @@ public class MonitorTest {
 
     @Test
     public void CanMonitorUrls() throws IOException {
-        // doNothing().when(urlHelper).initialize();
-
-        final List<Object> urls = List.of("https://test1.com", "https://test2.com");
-        final List<Object> checks = List.of("test1", "test2");
+        final List<Object> urls = Arrays.asList("https://test1.com", "https://test2.com");
+        final List<Object> checks = Arrays.asList("test1", "test2");
         when(config.getList("urlInfos.urlInfo.url")).thenReturn(urls);
         when(config.getList("urlInfos.urlInfo.check")).thenReturn(checks);
         when(urlHelper.get("https://test1.com")).thenReturn("test1");
